# ibrdtn

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt
android/ibrdtn/: AndroidManifest.xml
android/ibrdtn/jni/: Application.mk
android/ibrdtn/res/values/: strings_ble.xml
android/ibrdtn/res/values-de/: strings_ble.xml
android/ibrdtn/res/xml-v18/: preferences.xml
ibrcommon/: CMakeLists.txt  Makefile.am  configure.ac
ibrcommon/ibrcommon/: CMakeLists.txt  Exceptions.h  Logger.cpp  Logger.h  TLSExceptions.h  config.h.cmake
ibrcommon/ibrcommon/data/: BLOB.h  File.h
ibrcommon/ibrcommon/link/: CompatLinkManager.cpp  CompatLinkManager.h  LinkManager.cpp  LinkManager.h  LinkMonitor.cpp  LinkMonitor.h  Makefile.am  NetLinkManager.cpp  NetLinkManager.h  PosixLinkManager.cpp  PosixLinkManager.h  Win32LinkManager.cpp  Win32LinkManager.h
ibrcommon/ibrcommon/net/: lowpansocket.cpp  lowpansocket.h  socket.cpp  socket.h  vaddress.cpp  vaddress.h  vsocket.cpp  vsocket.h
ibrcommon/ibrcommon/ssl/: iostreamBIO.h
ibrcommon/ibrcommon/ssl/gcm/: gcm.cpp  gf128mul.cpp  gf128mul.h
ibrcommon/ibrcommon/thread/: Conditional.cpp  Conditional.h  Mutex.cpp  Mutex.h  Queue.h  RWMutex.cpp  RWMutex.h  Semaphore.cpp  Semaphore.h  SharedReference.h  SignalHandler.cpp  SignalHandler.h  Thread.cpp  Thread.h  Timer.cpp  Timer.h
ibrcommon/tests/link/: netlinktest.cpp
ibrcommon/tests/net/: tcpstreamtest.cpp  tcpstreamtest.h
ibrcommon/tests/stress/: Main.cpp  StressBLOB.cpp  StressBLOB.h
ibrcommon/tests/thread/: MutexTests.cpp  MutexTests.h  QueueTest.cpp  QueueTest.h  ThreadTest.cpp  ThreadTest.h
ibrcommon/tests/unittests/: Base64StreamTest.cpp  Base64StreamTest.h  BloomFilterTest.cpp
ibrdtn/daemon/: configure.ac
ibrdtn/daemon/etc/: ibrdtnd.conf
ibrdtn/daemon/src/: Component.cpp  Component.h  Configuration.cpp  Configuration.h  DTNTPWorker.cpp  DTNTPWorker.h  Main.cpp  NativeDaemon.cpp  NativeDaemon.h
ibrdtn/daemon/src/api/: ApiP2PExtensionHandler.cpp  ApiP2PExtensionHandler.h  ApiServer.cpp  ApiServer.h  BinaryStreamClient.cpp  BinaryStreamClient.h  ClientHandler.cpp  ClientHandler.h  EventConnection.cpp  EventConnection.h  ExtendedApiHandler.cpp  ExtendedApiHandler.h  ManagementConnection.cpp  ManagementConnection.h  NativeSerializerCallback.h  NativeSession.cpp  NativeSession.h  OrderedStreamHandler.cpp  OrderedStreamHandler.h  Registration.cpp  Registration.h
ibrdtn/daemon/src/core/: AbstractWorker.cpp  AbstractWorker.h  BundleCore.cpp  BundleCore.h  BundleFilter.cpp  BundleFilter.h  BundleFilterTable.cpp  BundleFilterTable.h  EventReceiver.h  EventSwitch.cpp  EventSwitch.h  FragmentManager.cpp  FragmentManager.h  Node.cpp  Node.h  StatusReportGenerator.cpp  StatusReportGenerator.h  WallClock.cpp  WallClock.h
ibrdtn/daemon/src/net/: ConnectionManager.cpp  ConnectionManager.h  ConvergenceLayer.h  DHTNameService.cpp  DHTNameService.h  DatagramConnection.cpp  DatagramConnection.h  DatagramConvergenceLayer.cpp  DatagramConvergenceLayer.h  DatagramService.h  DiscoveryAgent.cpp  DiscoveryAgent.h  DiscoveryBeaconHandler.cpp  DiscoveryBeaconHandler.h  EMailConvergenceLayer.cpp  EMailConvergenceLayer.h  EMailImapService.cpp  EMailImapService.h  EMailSmtpService.cpp  EMailSmtpService.h  FileConvergenceLayer.cpp  FileConvergenceLayer.h  FileMonitor.cpp  FileMonitor.h  HTTPConvergenceLayer.cpp  HTTPConvergenceLayer.h  IPNDAgent.cpp  IPNDAgent.h  LOWPANConnection.cpp  LOWPANConnection.h  LOWPANConvergenceLayer.cpp  LOWPANConvergenceLayer.h  LOWPANDatagramService.cpp  LOWPANDatagramService.h  Makefile.am  TCPConnection.cpp  TCPConnection.h  TCPConvergenceLayer.cpp  TCPConvergenceLayer.h  UDPConvergenceLayer.cpp  (+5 more)
ibrdtn/daemon/src/routing/: BaseRouter.cpp  BaseRouter.h  NeighborDatabase.cpp  NeighborDatabase.h  NeighborRoutingExtension.cpp  NeighborRoutingExtension.h  NodeHandshakeExtension.cpp  NodeHandshakeExtension.h  RetransmissionExtension.cpp  RetransmissionExtension.h  RoutingExtension.cpp  RoutingExtension.h  SchedulingBundleIndex.cpp  SchedulingBundleIndex.h  (+2 more)
ibrdtn/ibrdtn/: configure.ac
ibrdtn/ibrdtn/m4/: ibrcommon.m4
ibrdtn/tools/: configure.ac
(+101 files in other folders)
